unpackaged/main/default/objects/API_Connector__Duplicate_Check_Setting__mdt/API_Connector__Duplicate_Check_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Duplicate Check Setting</label>
    <pluralLabel>Duplicate Check Settings</pluralLabel>
</CustomObject>