unpackaged/main/default/objects/API_Connector__Duplicate_Check_Setting__mdt/fields/API_Connector__Duplicate_Account__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Duplicate_Account__c</fullName>
    <label>Duplicate Account</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>