unpackaged/main/default/objects/API_Connector__Duplicate_Check_Setting__mdt/fields/API_Connector__Duplicate_Contact__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Duplicate_Contact__c</fullName>
    <label>Duplicate Contact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>