unpackaged/main/default/objects/API_Connector__Duplicate_Check_Setting__mdt/fields/API_Connector__Output_Account_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Output_Account_Date__c</fullName>
    <label>Output Account Date</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>